@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1623 2003/10/23 19:49:59 uid30952 Exp $
+ * $Id: ChangeLog,v 1.1624 2003/10/23 20:15:37 peterrees Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-10-23 15:03 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/pp/ppcore.c
+    * Minor fix to ']' compilation in ConvertPatterns()
+
 2003-10-24 09:16 GMT+1200 Peter Rees <peter@rees.co.nz>
   * /include/hbset.c
     remove redundant extern declaration
